# fitness_api

./: .gitignore  filter.py  main.py  mixins.py  models.py  pyproject.toml  schema.py  settings.py
migrations/models/: 0_20220414213832_init.sql  0_20220513225907_init.sql  1_20220528133143_update.sql  2_20220601112944_update.sql  3_20220601173927_update.sql
router/: client.py  gymroom.py  gymrrom.py  office.py  service.py  subscriprion.py
